# TherapeuticNutrition

./: .replit  README.md  pyproject.toml
attached_assets/: Pasted-Replit-AI-Agent-Prompt-Therapeutic-Nutrition-App-for-Diabetic-Patients-with-Accessibility-Support--1745962146821.txt
backend/: main.py
backend/database/: diabetic_nutrition.db  init_db.py  schema.py
backend/models/: food_classifier.py  openai_integration.py
backend/routers/: chat.py  food.py
docs/: openai_integration.md  setup.md
mobile/: pubspec.yaml
mobile/assets/: foods.json
mobile/lib/: main.dart
mobile/lib/l10n/: app_ar.arb  app_en.arb
mobile/lib/models/: food.dart  user.dart
mobile/lib/screens/: chatbot.dart  home.dart  image_upload.dart  nutrition_display.dart  profile.dart
mobile/lib/services/: chatbot_service.dart  database_service.dart  image_recognition.dart  nutrition_service.dart  stt_service.dart  tts_service.dart
mobile/lib/utils/: constants.dart
mobile/lib/widgets/: accessibility_widgets.dart
